[package]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
description = "Unofficial async client for Binance."
edition = "2018"
keywords = ["binance", "crypto", "exchange", "trade"]
name = "binance-tokio"
version = "1.0.0"

[dependencies]
crypto-mac = {version = "0.11", features = ["std"]}
hmac = "0.11"
sha2 = "0.9"
# 
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "0.7"
url = "2"
chrono = "0.4"
#
futures = "0.3"
dotenv = "0.15"
hex = "0.4"
log = "0.4"
#
tokio = {version = "1", features = ["macros", "time", "rt-multi-thread"]}
tokio-rustls = "*"
async-tungstenite = {version = "0.13", features = ["tokio-runtime", "tokio-rustls"]}
reqwest = {version = "0.11", features = ["json", "rustls-tls"]}
#